objects/MUSW__Master_Fee_List__c.object
<CustomObject>
    <description>Master control table to determine which Permit, License, etc values will set or create Fee outcomes via DRE rules. Can be used to allow non-admin users with appropriate permissions to edit their own criteria and outcome values.</description>
    <fields>
        <fullName>AFRS_AR_Code__c</fullName>
        <label>xAFRS AR Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFRS_Cash_Code__c</fullName>
        <label>xAFRS Cash Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFRS_Revenue_Code__c</fullName>
        <label>AFRS Revenue Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF( AND(Effective_Start_Date__c&lt;TODAY(),
       (OR(ISBLANK(Effective_End_Date__c),
	       Effective_End_Date__c&gt; TODAY())
		) 
		),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Number__c</fullName>
        <label>Agency Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Method__c</fullName>
        <label>Application Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Credential__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Application_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appropriation__c</fullName>
        <label>Appropriation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BG_Object__c</fullName>
        <label>BG Object</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base__c</fullName>
        <label>Base</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Period__c</fullName>
        <label>Budget Period</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Structure__c</fullName>
        <label>Business Structure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon__c</fullName>
        <label>Coupon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <label>License Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <label>Credential</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Credential_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Wastewater_Flow_GPD__c</fullName>
        <label>Design Wastewater Flow (GPD)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1000 gpd or less</fullName>
                </value>
                <value>
                    <fullName>1001 - 2000 gpd</fullName>
                </value>
                <value>
                    <fullName>2001 - 5000 gpd</fullName>
                </value>
                <value>
                    <fullName>&gt; 5000 gpd</fullName>
                </value>
                <value>
                    <fullName>5000 gpd or less</fullName>
                </value>
                <value>
                    <fullName>5000 - 10000 gpd</fullName>
                </value>
                <value>
                    <fullName>greater than 10000 gpd</fullName>
                </value>
                <value>
                    <fullName>1000 - 2000 gpd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_not_use_in_Deposit_Dre__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not use in Deposit Dre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endorsement_Type__c</fullName>
        <label>Endorsement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Endorsement_Type_New</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expedited_Service_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedited Service Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee_Calculation_Type__c</fullName>
        <description>Fee Calculation Type list</description>
        <label>Fee Calculation Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                    <default>true</default>
                    <label>Flat</label>
                </value>
                <value>
                    <fullName>Tiered</fullName>
                </value>
                <value>
                    <fullName>Fee Based</fullName>
                </value>
                <value>
                    <fullName>Work Item Based</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Formula_Amount__c</fullName>
        <label>Fee Formula Amount</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fee_Name__c</fullName>
        <label>Fee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credential</fullName>
                </value>
                <value>
                    <fullName>Credential renewal</fullName>
                </value>
                <value>
                    <fullName>Credential Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Permit/Plan Review</fullName>
                </value>
                <value>
                    <fullName>Permit Renewal</fullName>
                </value>
                <value>
                    <fullName>Exam Passed</fullName>
                </value>
                <value>
                    <fullName>Exam Passed Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Service Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flat_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Flat Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <label>GL Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>High_Tier_Limit__c</fullName>
        <label>High Tier Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interpretive_Determination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interpretive Determination?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Endorsement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Endorsement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Fees_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Master Fee List</relationshipLabel>
        <relationshipName>Master_Fee_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <description>License Type list</description>
        <label>License Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>License_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Units__c</fullName>
        <description>checking for number of units</description>
        <formula>IF(License_Fees_Unit__r.Number_of_Units__c ==null, 1, License_Fees_Unit__r.Number_of_Units__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_Tier_Limit__c</fullName>
        <label>Low Tier Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MHC_Application_Type__c</fullName>
        <label>MHC Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Newly Licensed Community</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Change in Ownership</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Inactive_Years__c</fullName>
        <label>Number of Inactive Years</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Fee_Type__c</fullName>
        <label>Parent Fee Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <description>List of Permit types</description>
        <label>Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Permit_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Name__c</fullName>
        <label>Portal Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previously_approved_plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previously approved plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profession_Code__c</fullName>
        <label>Profession Code</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Area__c</fullName>
        <label>Program Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Program_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replace_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replace Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Code__c</fullName>
        <label>Revenue Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revisions_to_Miscellaneous_Reviews__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revisions to Miscellaneous Reviews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <label>Service Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Name</fullName>
                </value>
                <value>
                    <fullName>Withdraw Application</fullName>
                </value>
                <value>
                    <fullName>Submit Additional Documentation</fullName>
                </value>
                <value>
                    <fullName>Change in Status</fullName>
                </value>
                <value>
                    <fullName>Exam Re-Application</fullName>
                </value>
                <value>
                    <fullName>Relinquish Delegated Agent Status</fullName>
                </value>
                <value>
                    <fullName>Manage Affiliations</fullName>
                </value>
                <value>
                    <fullName>Public Health Emergency Plan Review</fullName>
                </value>
                <value>
                    <fullName>Priority Plan Review</fullName>
                </value>
                <value>
                    <fullName>Manufactured Homes Title Modification</fullName>
                </value>
                <value>
                    <fullName>Ad Reviews</fullName>
                </value>
                <value>
                    <fullName>Request Duplicate Wall Certificate</fullName>
                </value>
                <value>
                    <fullName>Reschedule Exam</fullName>
                </value>
                <value>
                    <fullName>Submit Exam Results</fullName>
                </value>
                <value>
                    <fullName>Project Size Change</fullName>
                </value>
                <value>
                    <fullName>Endorsement</fullName>
                </value>
                <value>
                    <fullName>License History Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Soil_Saturation_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Soil Saturation Report?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>Subtype</description>
        <label>Subtype</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMS_AR_Code__c</fullName>
        <label>xTMS AR Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Cash_Code__c</fullName>
        <label>xTMS Cash Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Revenue_Code__c</fullName>
        <label>xTMS Revenue Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Modification_Request__c</fullName>
        <label>Title Modification Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Title Surrender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transfer_to_Spouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer to Spouse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Status__c</fullName>
        <label>Trigger Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Component_Manual_review__c</fullName>
        <label>Type of Component Manual review</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Review</fullName>
                </value>
                <value>
                    <fullName>Revision or Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Component_manual__c</fullName>
        <label>Type of Component manual</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Permit_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>At-Grade Component Manual</fullName>
                </value>
                <value>
                    <fullName>In-ground Component Manual</fullName>
                </value>
                <value>
                    <fullName>Mound Component Manual</fullName>
                </value>
                <value>
                    <fullName>Pressure Distribution Component Manual</fullName>
                </value>
                <value>
                    <fullName>Other - Please specify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Individual_Site_Design__c</fullName>
        <label>Type of Submission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Soil Based</fullName>
                </value>
                <value>
                    <fullName>Holding Tank</fullName>
                </value>
                <value>
                    <fullName>Component Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Plan_Review__c</fullName>
        <label>Type of Plan Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Plan_Review</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Soil_Based_Individual_Site_Desig__c</fullName>
        <label>Type of Soil Based Individual Site Desig</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>At Grade</fullName>
                </value>
                <value>
                    <fullName>Non-Pressurized In-ground</fullName>
                </value>
                <value>
                    <fullName>Pressurize In-ground</fullName>
                </value>
                <value>
                    <fullName>Mound</fullName>
                </value>
                <value>
                    <fullName>Drip-line</fullName>
                </value>
                <value>
                    <fullName>Constructed Wetlands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Group__c</fullName>
        <description>User Groups</description>
        <label>Use Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Use_Group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <description>Work type</description>
        <label>Work Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Work_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <externalId>true</externalId>
        <label>external id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Late_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Late Renewal</label>
        <type>Checkbox</type>
    </fields>
    <label>Master Fee List</label>
    <listViews>
        <fullName>License_Fee</fullName>
        <columns>NAME</columns>
        <columns>License_Type__c</columns>
        <columns>Fee_Type__c</columns>
        <columns>Fee_Calculation_Type__c</columns>
        <columns>Base__c</columns>
        <columns>Fee_Formula_Amount__c</columns>
        <columns>Active__c</columns>
        <columns>Fee_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>License_Type__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>License Fee</label>
    </listViews>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>Profession_Code__c</columns>
        <columns>Revenue_Code__c</columns>
        <columns>Portal_Name__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Credential_Type__c</columns>
        <columns>Application_Method__c</columns>
        <columns>Base__c</columns>
        <columns>Fee_Formula_Amount__c</columns>
        <columns>AFRS_Cash_Code__c</columns>
        <columns>Agency_Number__c</columns>
        <columns>is_Late_Renewal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Permit_Fee</fullName>
        <columns>NAME</columns>
        <columns>Permit_Type__c</columns>
        <columns>Fee_Type__c</columns>
        <columns>Fee_Calculation_Type__c</columns>
        <columns>Base__c</columns>
        <columns>Multiplier__c</columns>
        <columns>Fee_Formula_Amount__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Permit_Type__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Permit Fee</label>
    </listViews>
    <nameField>
        <label>Master Fee List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Fee List</pluralLabel>
    <recordTypes>
        <fullName>License</fullName>
        <active>true</active>
        <description>License Fees</description>
        <label>License</label>
    </recordTypes>
    <recordTypes>
        <fullName>Permit</fullName>
        <active>true</active>
        <description>Permit Fees</description>
        <label>Permit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Allow_user_to_input_Only_till_4_digits</fullName>
        <active>true</active>
        <description>This validation rule would prevent user to enter more than 4 digits in the base field</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Base__c)),LEN(TEXT(Base__c))&gt;4)</errorConditionFormula>
        <errorDisplayField>Base__c</errorDisplayField>
        <errorMessage>You are not allowed to enter more than 4 digits.</errorMessage>
    </validationRules>
</CustomObject>